--- a/index.html
+++ b/index.html
@@ -3,22 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Screen Tawk.to Chat</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Website Under Maintenance</title>
     <style>
-        body, html {
+        body {
             margin: 0;
             padding: 0;
-            height: 100%;
-            overflow: hidden;
+            font-family: Arial, sans-serif;
+            background-color: #f1f1f1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
+        .container {
+            text-align: center;
+            background-color: #fff;
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            font-size: 50px;
+            color: #333;
+        }
+        p {
+            font-size: 20px;
+            color: #666;
+        }
+        .logo img {
+            width: 100px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <iframe src="https://tawk.to/chat/66f6a0184cbc4814f7dff05d/1i8pm2or7"></iframe>
+
+    <div class="container">
+        <div class="logo">
+            <img src="logo.png" alt="Logo">
+        </div>
+        <h1>We’ll be back soon!</h1>
+        <p>Our website is currently undergoing scheduled maintenance.<br>Thank you for your patience.</p>
+    </div>
+
 </body>
 </html>
